<resources>
    <string name="app_name">Urine Color Detection</string>
    <string name="check_your_health">Check Your Health</string>
    <string name="with_uriscan">with UCD Plus</string>
    <string name="scan_your_urine_color_and_receive_immediate_feedback_on_your_hydration_and_overall_health_status">Scan your urine color and receive immediate feedback on your hydration and overall health status.</string>
    <string name="scan_now">Scan Now</string>
    <string name="about_us">About Us</string>
    <string name="background">background</string>
    <string name="how_it_works">How it works</string>
    <string name="benefits">Benefits</string>
    <string name="desc_about">Scan your urine color and receive immediate feedback on your hydration and overall health status.</string>
    <string name="desc_works">UCD uses a proprietary algorithm to analyze the color of your urine. The algorithm is based on a clinical study that found that urine color is a reliable indicator of hydration and overall health.</string>
    <string name="benefits_0">UCD can help you:</string>
    <string name="benefits_1">Stay hydrated and healthy</string>
    <string name="benefits_2">Identify potential health problems early</string>
    <string name="benefits_3">Make informed decisions about your health</string>
    <string name="our_team">Our Team</string>
    <string name="hafiz">MD - Hafiz Muhammad Kurniawan</string>
    <string name="lidia">CC - Lidia Nurhaliza</string>
    <string name="feri">CC - Feri Yasin</string>
    <string name="fifi">ML - Fifi Alfiaturrohmah</string>
    <string name="indra">ML - Indra Juliansyah Putra</string>
    <string name="abdul">ML - Abdul Jabbar Robbani</string>
    <string name="wira">MD - Wira Respati</string>
    <string name="back">Back</string>
    <string name="permission_granted">Permission request granted</string>
    <string name="permission_denied">Permission request denied</string>
    <string name="urine_color">Urine Color</string>
    <string name="_1_january_2024">1 January 2024</string>
    <string name="submit">Submit</string>
</resources>